--- a/classroombackend/package.json
+++ b/classroombackend/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -r dotenv/config src/index.js"
+    "dev": "nodemon -r dotenv/config src/index.js",
+    "build": "",
+    "test": "react-scripts test"
   },
   "keywords": [
     "classroom",
