--- a/client-site/package.json
+++ b/client-site/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.3",
+    "js-cookie": "^3.0.5",
     "material-icons": "^1.13.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
